# carimbo

./: .clang-format  .gitignore  .pre-commit-config.yaml  BUILDING.md  CMakeLists.txt  DOCUMENTATION.md  LICENSE  Makefile  Makefile.desktop  Makefile.webassembly  README.md  carimbo.avif  conanfile.py  cpu.prof  requirements.txt
.github/: FUNDING.yaml
.github/workflows/: android.yaml  build.yaml  ios.yaml  lint.yaml  macos.yaml  release.yaml  steam.yaml  ubuntu.yaml  webassembly.yaml  windows.yaml
src/: achievement.cpp  achievement.hpp  animation.hpp  application.cpp  application.hpp  audiodevice.cpp  audiodevice.hpp  bootstrap.lua  camera.cpp  camera.hpp  canvas.cpp  canvas.hpp  cassete.cpp  cassete.hpp  cassete.tpp  cassette.cpp  cassette.hpp  cassette.tpp  collections.cpp  collections.hpp  collision.cpp  collision.hpp  color.cpp  color.hpp  common.hpp  component.hpp  componentarray.cpp  componentarray.hpp  componentmanager.hpp  components.cpp  components.hpp  concepts.hpp  constant.hpp  coordinator.hpp  cursor.cpp  cursor.hpp  debugger.lua  defer.hpp  delay.cpp  delay.hpp  (+158 more)
